book/_build/html/reports/searching.log
Traceback (most recent call last):
  File "/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from typing import List, Tuple

def find_two_highest_walk(amounts : List[int]) -> Tuple[int, int]:
    """Return a tuple of the indices of the tow highest values in list amounts.
    >>> seals = [334, 468, 549, 836, 660, 389, 308, 392, 520, 271]
    >>> find_two_highest_walk(seals)
    (3, 4)
    >>> seals == [334, 468, 549, 836, 660, 389, 308, 392, 520, 271]
    True
    """

    # Keep track of the indices of the two highest values found so far
    if amounts[0] > amounts[1]:
        high_index1, high_index2 = 0, 1
    else:
        high_index1, high_index2 = 1, 0
        
    # Examine each value in the list in order
    for i in range(2, len(amounts)):
    #     Update the indices when a new higher value is found
    # Return the two indices   
------------------

[0;36m  File [0;32m"/var/folders/rm/jpz9s5s53h1gyb3l6pg_h57r0000gn/T/ipykernel_22922/164394736.py"[0;36m, line [0;32m21[0m
[0;31m    # Return the two indices[0m
[0m                               ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (164394736.py, line 21)

